docs/v4.0.0/_sources/gallery/extras/LG11.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/LG11.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_LG11.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_LG11.py:


Laguerre-Gauss 2-3 Mode Detector
================================

This example demonstrates the initialization and visualization of HG01 Mode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-26

.. code-block:: Python

    from PyMieSim.units import ureg

    from PyMieSim.single.detector import CoherentMode
    from PyMieSim.single import SystemPlotter

    detector = CoherentMode(
        mode_number="LG23",  # Specifying LP23 mode
        sampling=900 * ureg.AU,  # Number of sampling points
        NA=0.4 * ureg.AU,  # Numerical Aperture
        gamma_offset=0 * ureg.degree,  # Gamma offset
        rotation=0 * ureg.degree,  # Rotation angle
        phi_offset=40 * ureg.degree,  # Phi offset in degrees
    )

    plotter = SystemPlotter()
    plotter.plot(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_LG11_001.png
   :alt: LG11
   :srcset: /gallery/extras/images/sphx_glr_LG11_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <pyvista.plotting.plotter.Plotter object at 0x7f1532ea3710>




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.280 seconds)


.. _sphx_glr_download_gallery_extras_LG11.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: LG11.ipynb <LG11.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: LG11.py <LG11.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: LG11.zip <LG11.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
